--- a/src/app/components/block/block.component.html
+++ b/src/app/components/block/block.component.html
@@ -24,7 +24,7 @@
 								</tr>
 								<tr>
 									<td>{{ 'Producer' | translate }}:</td>
-									<td><a routerLink="/accounts/{{block.producer}}">{{block.producer}}</a></td>
+									<td><a routerLink="/producers/{{block.producer}}">{{block.producer}}</a></td>
 								</tr>
 								<tr>
 									<td>{{ 'Timestamp' | translate }}:</td>
