--- a/src/app/components/contracts/contracts.component.html
+++ b/src/app/components/contracts/contracts.component.html
@@ -28,6 +28,7 @@
                 <tr>
                   <th>{{ 'ActionId' | translate }}</th>
                   <th class="hidden-xs">{{ 'TransactionId' | translate }}</th>
+                  <th>{{ 'CreatedAt' | translate }}</th>
                   <th>{{ 'Authorization' | translate }}</th>
                   <th>{{ 'Handler' | translate }}</th>
                   <th>{{ 'Name' | translate }}</th>
@@ -37,6 +38,7 @@
                 <tr *ngFor="let action of actions">
                   <td><a routerLink="/actions/{{action.id}}">{{action.id|slice:0:28}}...</a></td>
                   <td class="hidden-xs"><a routerLink="/transactions/{{action.transaction}}">{{action.transaction|slice:0:28}}...</a></td>
+                  <td>{{action.createdAt * 1000 | date:'medium'}}</td>
                   <td>
                     <span *ngFor="let authorization of action.authorizations">
                           <a routerLink="/accounts/{{authorization.actor}}">{{authorization.actor}}</a> 
