--- a/src/app/components/producers/producers.component.html
+++ b/src/app/components/producers/producers.component.html
@@ -9,6 +9,16 @@
 
 		<div class="row">
 			<div class="col-lg-12">
+				<div class="panel">
+					<div class="progress" style="height: 20px;">
+						<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" [ngStyle]="{'width': chainPercentage + '%'}">Votes: {{ chainPercentage * 10000000 |number }} ({{chainPercentage}}%)</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-lg-12">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						{{ 'Producers' | translate }}
