--- a/src/app/components/account/account.component.css
+++ b/src/app/components/account/account.component.css
@@ -1,3 +1,7 @@
-pre {
-    white-space: pre-line;
-}
+pre {  white-space: pre-line !important; }
+pre span {white-space: pre-line;}
+.string { color: green; }
+.number { color: darkorange; }
+.boolean { color: blue; }
+.null { color: magenta; }
+.key { color: red; }
