--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -71,7 +71,7 @@
 			</div>
 		</div>
 
-		<div *ngIf="account.abi" class="panel-group" id="accordion-abi">
+		<div *ngIf="account && account.abi" class="panel-group" id="accordion-abi">
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h4 class="panel-title">
