--- a/src/app/components/transaction/transaction.component.html
+++ b/src/app/components/transaction/transaction.component.html
@@ -39,12 +39,36 @@
 									<td>{{ 'Actions' | translate }}:</td>
 									<td>{{transaction.numActions}}</td>
 								</tr>
+
+								<tr *ngIf="transactionRaw">
+									<td>{{ 'CPU Usage' | translate }}:</td>
+									<td>{{transactionRaw.cpu_usage_us | number }} µs</td>
+								</tr>
+								<tr *ngIf="transactionRaw">
+									<td>{{ 'Net Usage' | translate }}:</td>
+									<td>{{transactionRaw.net_usage_words  | toKB}} KB</td>
+								</tr>
 							</table>
 						</div>
 					</div>
 					<!-- /.panel-body -->
 				</div>
 				<!-- /.panel -->
+			</div>
+		</div>
+
+		<div class="panel-group" id="accordion">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" class="collapsed">{{ 'BlockchainRawData' | translate }}</a>
+					</h4>
+				</div>
+				<div id="collapseOne" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+					<div class="panel-body">
+						<prettyjson [obj]="transactionRaw"></prettyjson>
+					</div>
+				</div>
 			</div>
 		</div>
 
