--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -35,12 +35,12 @@
 
 								<tr *ngIf="balance">
 									<td>{{ 'Balance' | translate }}:</td>
-									<td>{{balance}}</td>
+									<td>{{balance}} EOS</td>
 								</tr>
 
 								<tr *ngIf="accountRaw">
 									<td>{{ 'RAM' | translate }}:</td>
-									<td>{{accountRaw.ram_usage | toKB }} KB / {{accountRaw.ram_quota | toKB}} KB</td>
+									<td>{{accountRaw.ram_usage | toKB }} KB / {{accountRaw.ram_quota | toKB}} KB <span *ngIf="ramPrice">({{(ramPrice * accountRaw.ram_quota).toFixed(4)}} EOS)</span></td>
 								</tr>
 
 								<tr *ngIf="accountRaw">
@@ -59,6 +59,14 @@
 										Used: {{(accountRaw.net_limit.used) | toKB}} KB<br />
 										Available: {{(accountRaw.net_limit.available) | toKB}} KB<br />
 										Max: {{(accountRaw.net_limit.max) | toKB}} KB
+									</td>
+								</tr>
+
+								<tr *ngIf="accountRaw && balance && ramPrice">
+									<td>{{ 'Value' | translate }}:</td>
+									<td>
+										{{((accountRaw.cpu_weight / 10000) + (accountRaw.net_weight / 10000) + balance + (ramPrice * accountRaw.ram_quota)).toFixed(4)}} EOS
+
 									</td>
 								</tr>
 							</table>
