--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -40,7 +40,7 @@
 
 								<tr *ngIf="accountRaw">
 									<td>{{ 'RAM' | translate }}:</td>
-									<td>{{accountRaw.ram_usage | toKB }} KB / {{accountRaw.ram_quota | toKB}} KB <span *ngIf="ramPrice">({{(ramPrice * accountRaw.ram_quota) | number:'1.0-4'}} EOS)</span></td>
+									<td>{{accountRaw.ram_usage | toKB | number:'1.0-2'}} KB / {{accountRaw.ram_quota | toKB | number:'1.0-2'}} KB <span *ngIf="ramPrice">({{(ramPrice * accountRaw.ram_quota) | number:'1.0-4'}} EOS)</span></td>
 								</tr>
 
 								<tr *ngIf="accountRaw">
