--- a/src/app/contract/contract1/contract1.component.html
+++ b/src/app/contract/contract1/contract1.component.html
@@ -5,55 +5,57 @@
         {{ 'Action' | translate }}
       </h1>
     </mat-toolbar>
-    <ng-container *ngIf="(action$ | async) as action">
+    <ng-container *ngIf="(action$ | async) as action; else loading">
       <mat-expansion-panel expanded="true">
         <mat-expansion-panel-header>
           <mat-panel-title>
             {{ 'Action' | translate }}
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <table class="table table-striped">
-          <tr>
-            <td>{{ 'TransactionId' | translate }}:</td>
-            <td>
-              <a routerLink="/transactions/{{action.transaction}}">{{action.transaction}}</a>
-            </td>
-          </tr>
-          <tr>
-            <td>{{ 'ActionIndex' | translate }}:</td>
-            <td>{{action.id}}</td>
-          </tr>
-          <tr>
-            <td>{{ 'CreatedAt' | translate }}:</td>
-            <td>{{action.createdAt * 1000 | date:'medium'}}</td>
-          </tr>
-          <tr>
-            <td>{{ 'HandlerAccount' | translate }}:</td>
-            <td>
-              <a routerLink="/accounts/{{action.account}}">{{action.account}}</a>
-            </td>
-          </tr>
-          <tr>
-            <td>{{ 'Name' | translate }}:</td>
-            <td>{{action.name}}</td>
-          </tr>
-          <tr>
-            <td>{{ 'Authorization' | translate }}:</td>
-            <td>
-              <span *ngFor="let account of action.authorizations">
-                <a routerLink="/accounts/{{account.actor}}">{{account.actor}}</a>
-              </span>
-            </td>
-          </tr>
-          <tr *ngIf="action.raw">
-            <td>{{ 'CPU Usage' | translate }}:</td>
-            <td>{{action.raw.cpu_usage_us | number }} µs</td>
-          </tr>
-          <tr *ngIf="action.raw">
-            <td>{{ 'Net Usage' | translate }}:</td>
-            <td>{{action.raw.net_usage_words | toKB | number:'1.0-3'}} KB</td>
-          </tr>
-        </table>
+        <div style="overflow:scroll">
+          <table class="table table-striped">
+            <tr>
+              <td>{{ 'TransactionId' | translate }}:</td>
+              <td>
+                <a routerLink="/transactions/{{action.transaction}}">{{action.transaction}}</a>
+              </td>
+            </tr>
+            <tr>
+              <td>{{ 'ActionIndex' | translate }}:</td>
+              <td>{{action.id}}</td>
+            </tr>
+            <tr>
+              <td>{{ 'CreatedAt' | translate }}:</td>
+              <td>{{action.createdAt * 1000 | date:'medium'}}</td>
+            </tr>
+            <tr>
+              <td>{{ 'HandlerAccount' | translate }}:</td>
+              <td>
+                <a routerLink="/accounts/{{action.account}}">{{action.account}}</a>
+              </td>
+            </tr>
+            <tr>
+              <td>{{ 'Name' | translate }}:</td>
+              <td>{{action.name}}</td>
+            </tr>
+            <tr>
+              <td>{{ 'Authorization' | translate }}:</td>
+              <td>
+                <span *ngFor="let account of action.authorizations">
+                  <a routerLink="/accounts/{{account.actor}}">{{account.actor}}</a>
+                </span>
+              </td>
+            </tr>
+            <tr *ngIf="action.raw">
+              <td>{{ 'CPU Usage' | translate }}:</td>
+              <td>{{action.raw.cpu_usage_us | number }} µs</td>
+            </tr>
+            <tr *ngIf="action.raw">
+              <td>{{ 'Net Usage' | translate }}:</td>
+              <td>{{action.raw.net_usage_words | toKB | number:'1.0-3'}} KB</td>
+            </tr>
+          </table>
+        </div>
       </mat-expansion-panel>
       <mat-expansion-panel expanded="true">
         <mat-expansion-panel-header>
@@ -72,5 +74,9 @@
         <prettyjson [obj]="action.raw"></prettyjson>
       </mat-expansion-panel>
     </ng-container>
+    <ng-template #loading>
+      <mat-progress-spinner color="primary" mode="indeterminate" value="50">
+      </mat-progress-spinner>
+    </ng-template>
   </div>
 </app-page>
