--- a/src/app/contract/contracts1/contracts1.component.css
+++ b/src/app/contract/contracts1/contracts1.component.css
@@ -3,6 +3,9 @@
     border: 1px solid rgba(0,0,0,.12);
 }
 
+.mat-header-cell,
 .mat-cell {
     padding: 5px;
+    word-break: break-word;
+    min-width: 100px;
 }
