--- a/src/app/contract/contracts1/contracts1.component.html
+++ b/src/app/contract/contracts1/contracts1.component.html
@@ -7,8 +7,10 @@
     </mat-toolbar>
     <app-table [dataSource]="actions$ | async">
       <table mat-table [dataSource]="actions$ | async">
-        <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
-        <tr mat-row *matRowDef="let row; columns: columnHeaders;"></tr>
+        <ng-container *ngIf="columnHeaders$ | async as columnHeaders">
+          <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
+          <tr mat-row *matRowDef="let row; columns: columnHeaders;"></tr>
+        </ng-container>
         <ng-container matColumnDef="actionId">
           <th mat-header-cell *matHeaderCellDef>{{ 'ActionId' | translate }}</th>
           <td mat-cell *matCellDef="let action">
