--- a/src/app/shared/masterpage/header/header.component.html
+++ b/src/app/shared/masterpage/header/header.component.html
@@ -1,6 +1,6 @@
 <header fxLayout="row" fxLayoutAlign="start center" class="mat-elevation-z4">
-  <a class="brand" routerLink="/">
-    <img [src]="logoUrl" /> {{ appName | translate }}
+  <a class="brand" routerLink="/v1">
+    <img [src]="logoUrl" />{{ appName | translate }}
   </a>
   <span fxFlex></span>
   <app-search></app-search>
