--- a/src/app/contract1/contracts/contracts.component.html
+++ b/src/app/contract1/contracts/contracts.component.html
@@ -12,7 +12,7 @@
     <ng-container matColumnDef="actionId">
       <th mat-header-cell *matHeaderCellDef>{{ 'ActionId' | translate }}</th>
       <td mat-cell *matCellDef="let action">
-        <a [routerLink]="['/actions',action.id]">{{action.id}}</a>
+        <a [routerLink]="['./',action.id]">{{action.id}}</a>
       </td>
     </ng-container>
     <ng-container matColumnDef="transactionId">
