--- a/src/app/shared/masterpage/header/header.component.html
+++ b/src/app/shared/masterpage/header/header.component.html
@@ -3,5 +3,5 @@
     <img [src]="logoUrl" />{{ appName | translate }}
   </a>
   <span fxFlex></span>
-  <app-search></app-search>
+  <app-search style="width:400px;"></app-search>
 </header>
